# strix

./: .gitignore  CHANGELOG.md  NOTICE  README.md  manifest.yml  pyproject.toml  strix.spec
.agents/memory_bank/active/: PROGRESS.md  current_focus.md
.agents/specs/strix-governance-layer/: security-audit-prep.md
.agents/specs/strix-governance-layer/validation/: sgl-core-completion-report.md  sgl-deploy-fix-completion-report.md
benchmarks/business_logic_fixture/: Dockerfile  README.md  app.py
benchmarks/bv2p/: README.md
benchmarks/bv2p/idor_memories/: Dockerfile  app.py  core.py
benchmarks/bv2p/ssrf_fetch/: Dockerfile  app.py  core.py
containers/: Dockerfile  Dockerfile.gateway  Dockerfile.prod  Dockerfile.toolcheck  docker-entrypoint.prod.sh  docker-entrypoint.sh  egress-enforcer.sh  gateway-entrypoint.sh
docs/: contributing.mdx  docs.json  index.mdx  quickstart.mdx
docs/engine/: detection-primitives.mdx  overview.mdx  propose-dispose.mdx
docs/integrations/: ci-cd.mdx  github-actions.mdx
strix/agents/: factory.py  funnel_emit.py
strix/core/: agents.py  execution.py  hooks.py  paths.py  runner.py
strix/core/diff/: __init__.py  engine.py  models.py  normalize.py
strix/core/govern/: __init__.py  audit.py  breaker.py  cost_ceiling.py  limiter.py  ownership.py  scope.py
strix/core/identity/: __init__.py  capture.py  export.py  models.py  redaction.py  replay.py  store.py
strix/core/inventory/: __init__.py  classify.py  extractors.py  models.py  normalizer.py  scoring.py  spray.py  store.py
strix/core/inventory/collectors/: __init__.py  _scope.py  code.py  external.py  js.py  sitemap.py
strix/core/inventory/parsers/: __init__.py  fastapi.py  reachability.py
strix/core/logic/: __init__.py  catalog.py  context.py  gate.py  models.py  orchestrator.py  store.py
strix/core/net/: __init__.py  classifier.py  corpus.py  ip_decoder.py  normalize.py  oob.py  redirect.py
strix/core/oob/: __init__.py  correlator.py  models.py  registry.py
strix/core/proposals/: __init__.py  assembler.py  models.py
strix/core/race/: __init__.py  aggregator.py  collector.py  dispatch.py  harness.py  models.py  precondition.py  verdict.py
strix/interface/: main.py  utils.py
strix/report/: __init__.py  proposals.py  state.py  writer.py
strix/research/: __init__.py  corpus.py  metrics.py
strix/research/ablation/: __init__.py  __main__.py  single_stage.py
strix/runtime/: docker_client.py  egress_proxy.py
strix/runtime/oob/: README.md  __init__.py  bootstrap.py  provider.py  session_manager.py
strix/telemetry/: logging.py
strix/tools/identity/: __init__.py  tools.py
strix/tools/inventory/: __init__.py  tools.py
strix/tools/logic/: __init__.py  tools.py
strix/tools/oob/: __init__.py  tools.py
strix/tools/proxy/: __init__.py  tools.py
strix/tools/race/: __init__.py  tools.py
strix/tools/reporting/: tool.py
strix/tools/scanner_runner/: __init__.py  tool.py
tests/: __init__.py  test_bv2p_corpus.py  test_core_net.py  test_core_net_redirect.py  test_core_paths.py  test_cost_ceiling.py  test_diff_engine.py  test_egress_proxy.py  test_funnel_emit_hook.py  test_funnel_metrics.py  test_funnel_wrapper.py  test_gate_neutrality.py  test_govern_audit.py  test_govern_breaker.py  test_govern_limiter.py  test_govern_ownership.py  test_govern_scope.py  test_identity_capture.py  test_identity_replay.py  test_identity_store.py  test_identity_tools.py  test_import_boundary.py  test_interface_utils_import.py  test_inventory_collectors.py  test_inventory_extractors.py  test_inventory_normalizer.py  test_inventory_parser_reachability.py  test_inventory_scoring.py  test_inventory_spray.py  test_inventory_tool_registration.py  test_inventory_tools.py  test_logic_catalog.py  test_logic_gate.py  test_logic_integration.py  test_logic_model.py  test_logic_orchestrator.py  test_logic_pbt.py  test_logic_tools.py  test_oob_correlator.py  test_oob_provider.py  (+12 more)
tests/integration/: test_business_logic_fixture.py
